--- a/src/components/HomeSlider.astro
+++ b/src/components/HomeSlider.astro
@@ -85,6 +85,20 @@ import logo from "../assets/image/logo.png";
     aspect-ratio: 402 / 300;
   }
 
+    h1 {
+    font-size: 2rem;
+    font-weight: $bold;
+    line-height: 1.2;
+
+    @media (min-width: 768px) {
+      font-size: 3rem; 
+    }
+
+    @media (min-width: 1024px) {
+      font-size: 4rem; 
+    }
+  }
+
   @media (min-width: 1024px) {
     h1 {
       font-size: 4rem;
