--- a/src/components/Hamburguer.astro
+++ b/src/components/Hamburguer.astro
@@ -17,17 +17,22 @@
     justify-content: space-around;
     align-items: center;
     background-color: rgba($black, 60%);
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 8px;
     border: none;
     cursor: pointer;
     padding: 0;
+
+    &.hidden {
+    opacity: 0; 
+    pointer-events: none;
+  }
   }
 
   .line {
-    width: 100%; 
-    height: 6px;
+    width: 80%; 
+    height: 5px;
     border-radius: 8px;
     color: $white;
     background-color: $white;
