--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -15,7 +15,7 @@ import logoA from "../assets/image/logo-a.png";
         <li><a href="#home" data-astro-prefetch>INICIO</a></li>
         <li><a href="#about" data-astro-prefetch>NOSOTROS</a></li>
         <li><a href="#ivs" data-astro-prefetch>IVS CORP</a></li>
-        <li><a href="#projects" data-astro-prefetch>PROYECTOS</a></li>
+        <li><a href="#projects" data-astro-prefetch>EMPRESA</a></li>
         <li><a href="#contact" data-astro-prefetch>CONTACTO</a></li>
         <div class="content"> 
           <li><a id="language-toggle" href="/en" data-astro-prefetch rel="noreferrer">EN</a></li>
