--- a/src/components/NavigationEn.astro
+++ b/src/components/NavigationEn.astro
@@ -15,7 +15,7 @@ import logoA from "../assets/image/logo-a.png";
         <li><a href="#home" data-astro-prefetch>HOME</a></li>
         <li><a href="#about" data-astro-prefetch>ABOUT</a></li>
         <li><a href="#ivs" data-astro-prefetch>IVS CORP</a></li>
-        <li><a href="#projects" data-astro-prefetch>PROJECTS</a></li>
+        <li><a href="#projects" data-astro-prefetch>COMPANY</a></li>
         <li><a href="#contact" data-astro-prefetch>CONTACT</a></li>
         <div class="content"> 
           <li><a id="language-toggle" href="/" data-astro-prefetch rel="noreferrer">ES</a></li>
