--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,9 +21,7 @@ import Contact from "../components/Contact.astro";
 	<SectionFlex
 	title="Bienvenido..."
 	EN="A"
-	textA="DISTRIBUCIÓN DE PRODUCTOS SIDERURGICOS A NIVEL NACIONAL E INTERNACIONAL"
-	textB="Lorem ipsum dolor, labore molestias consequuntur earum dolorum est "
-	textC="lorem ipsum dolor sit"
+	textA="DISTRIBUCIÓN DE PRODUCTOS SIDERURGICOS AL MERCADO NACIONAL E INTERNACIONAL"
 	buttomA="Leer mas"
 	titleA="Acerca de nosotros"
 	textD="Somos una empresa especializada en la comercialización  y distribución de productos siderúrgicos a nivel nacional e internacional para impulsar y transformar la economía de Venezuela." />
@@ -32,19 +30,18 @@ import Contact from "../components/Contact.astro";
 	textA="Venezolana de Acero tiene como actividad principal comercializar, distribuir y exportar productos elaborados por la industria siderúrgica nacional, como soporte y apoyo en la economía venezolana.!"
 	textB="Comercializar, distribuir y exportar productos elaborados por la industria siderúrgica nacional"
 	textC="Ser la empresa líder en impulsar la comercialización nacional e internacional de la industria siderúrgica en Venezuela."
-	textD="contenido2"
 	subtitleA="MISION"
-	subtitleB="VISION"
-	subtitleC="PRODUCTO" />
+	subtitleB="VISION"/>
 	<SectionBox
-	 titleA="contenido1"
-	 titleB="contenido2"
-	 titleC="contenido3"
 	 titleD="IVS CORP"
-	 titleE="contenido5"
-	 titleF="contenido6"
-	 titleG="contenido7"/>
-	  <Contact />
+	 subtitleA="Iron Ore"
+	 subtitleB="Iron Ore Pellets"
+	 subtitleC="HBI"
+	 subtitleD="Tundish"
+	 titleh="Como parte de un sólido grupo empresarial, IVS CORP se especializa en la comercialización y distribución de productos siderúrgicos a nivel internacional."
+	 titlei="En conjunto con Venezolana de Acero, complementamos una alianza estratégica que nos permite realizar operaciones en el exterior, impulsando el desarrollo industrial y contribuyendo a la transformación económica de Venezuela con soluciones innovadoras y de alto rendimiento. Este enfoque refuerza la colaboración y el alcance internacional de la empresa"/> 
+	 <Contact
+	 title="CONTACTANOS" />
 	<Footer />
 </SpanishLayout>
 <script>
